# Foundry_Project

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
Counter/: ENHANCED_FEATURES.md
Counter/script/: DecentralizedPolls.s.sol  EnhancedPolls.s.sol
Counter/src/: DecentralizedPolls.sol  EnhancedPolls.sol  GovernanceToken.sol
Counter/test/: DecentralizedPolls.t.sol  EnhancedPolls.t.sol
scripts/: demo.py
src/: main.rs
