[package]
name = "Rust_Foundry"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
colored = "2.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
tabled = "0.15"
